--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.exclude": {
         "dist/": true,
         "node_modules/": true,
-        ".vscode/": true
+        ".vscode/": true,
+        "config.codekit3" : true,
+        "package-lock.json" : true
     }
 }
