Updating to ES6

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "homepage": "https://github.com/hamzaoza/parc#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "orbit-controls-es6": "^2.0.0",
+    "socket.io": "^2.2.0",
+    "three-orbitcontrols": "^2.102.1"
   },
   "devDependencies": {
     "three": "^0.102.1"
