--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "navigo": "^7.1.2",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "three": "^0.106.2"
   },
   "devDependencies": {
-    "plyr": "^3.5.6",
-    "three": "^0.106.2"
+    "plyr": "^3.5.6"
   }
 }
