--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "name": "parc",
   "dependencies": {
     "express": "^4.17.1",
-    "navigo": "^7.1.2",
-    "socket.io": "^2.2.0",
-    "three": "^0.106.2"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "plyr": "^3.5.6"
+    "plyr": "^3.5.6",
+    "three": "^0.106.2",
+    "navigo": "^7.1.2"
   }
 }
