--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "main": "index.js",
-  "bugs": {
-    "url": "https://github.com/hamzaoza/parc/issues"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hamzaoza/parc.git"
   },
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  },
+  "version": "1.0.0",
+  "bugs": {
+    "url": "https://github.com/hamzaoza/parc/issues"
+  },
+  "devDependencies": {
+    "three": "^0.108.0",
+    "navigo": "^7.1.2",
+    "plyr": "^3.5.6"
+  },
+  "homepage": "https://github.com/hamzaoza/parc#readme",
+  "author": "Hamza Oza",
+  "description": "A virtual exhibition to raise awareness about the interconnectedness of building design and infection, and to create a space for dialogue between designers, architects, clinicians, patients, healthcare managers etc.",
+  "main": "index.js",
   "scripts": {
     "upload": "git push origin master && git subtree push --prefix=dist origin gh-pages"
   },
   "optionalDependencies": {},
-  "author": "Hamza Oza",
-  "homepage": "https://github.com/hamzaoza/parc#readme",
-  "version": "1.0.0",
-  "description": "A virtual exhibition to raise awareness about the interconnectedness of building design and infection, and to create a space for dialogue between designers, architects, clinicians, patients, healthcare managers etc.",
-  "name": "parc",
-  "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.2.0"
-  },
-  "devDependencies": {
-    "plyr": "^3.5.6",
-    "three": "^0.106.2",
-    "navigo": "^7.1.2"
-  }
+  "name": "parc"
 }
